--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+  <wm-root>
+    <div class="ui active inverted dimmer">
+      <div class="ui text loader large">
+        Lade WeMeet...
+      </div>
+    </div>
+
+  </wm-root>
 </body>
 </html>
