introduced comment form

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>WeMeet</title>
@@ -10,14 +11,26 @@
 
 
 </head>
-<body>
-  <wm-root>
-    <div class="ui active inverted dimmer">
-      <div class="ui text loader large">
-        Lade WeMeet...
-      </div>
-    </div>
 
-  </wm-root>
+<body>
+
+<div class="ui sidebar vertical left inverted menu" >
+    <a href="#" class="item">punkt 1 </a>
+    <a href="#" class="item">punkt 2 </a>
+    <a href="#" class="item">punkt 3 </a>
+    <a href="#" class="item">punkt 4 </a>
+  </div>
+
+  <div class="pusher">
+    <wm-root>
+      <div class="ui active inverted dimmer">
+        <div class="ui text loader large">
+          Lade WeMeet...
+        </div>
+      </div>
+
+    </wm-root>
+  </div>
 </body>
+
 </html>
