--- a/src/index.html
+++ b/src/index.html
@@ -6,20 +6,21 @@
   <title>WeMeet</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
 </head>
 
 <body>
+
   <wm-root>
-    <div class="pusher">
-      <div class="ui active inverted dimmer">
-        <div class="ui text loader large">
-          Lade WeMeet...
-        </div>
+
+    <div class="ui active inverted dimmer">
+      <div class="ui text loader large">
+        Lade WeMeet...
       </div>
     </div>
+
   </wm-root>
 
 </body>
